# ndk-handler

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/handler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HandlerController.cpp  HandlerController.h  MyHandler.cpp  MyHandler.h  com_wind_ndk_handler_JHandler.cpp  com_wind_ndk_handler_JHandler.h
app/src/main/cpp/egl_core/: EGLCore.cpp  EGLCore.h
app/src/main/cpp/message_queue/: Handler.cpp  Handler.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h
app/src/main/cpp/utils/: Log.h
app/src/main/java/com/wind/ndk/handler/: JHandler.java  MainActivity.java
app/src/main/jni/: com_wind_ndk_handler_JHandler.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wind/ndk/handler/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
